# Ass-Three

./: CMakeLists.txt  README.md  clientMain.cpp  main.cpp  serverMain.cpp
classifier/: classifier.cpp  classifier.h
classifier/classifiable/: classifiable.cpp  classifiable.h  dataPoint.cpp  dataPoint.h  dataReader.cpp  dataReader.h  dataSorter.cpp  dataSorter.h
classifier/dataspace/: dataSpace.cpp  dataSpace.h  dataSpaceCreator.cpp  dataSpaceCreator.h
classifier/distances/: chebyshevDistance.cpp  chebyshevDistance.h  distance.h  euclideanDistance.cpp  euclideanDistance.h  manhattanDistance.cpp  manhattanDistance.h
client/: client.cpp  client.h  clientSocket.cpp  clientSocket.h
server/: ServerRunner.cpp  ServerRunner.h  cli.cpp  cli.h  server.cpp  server.h  serverRunner.cpp  serverRunner.h  serverSocket.cpp  serverSocket.h  serverThread.cpp  serverThread.h  server_handler.cpp  server_handler.h
server/IO/: defaultIO.h  socketIO.cpp  socketIO.h  standardIO.cpp  standardIO.h  streamIO.cpp  streamIO.h
server/command/: classifyData.cpp  classifyData.h  close.cpp  close.h  command.cpp  command.h  displayConfusionMatrix.cpp  displayConfusionMatrix.h  displayData.cpp  displayData.h  knnSettings.cpp  knnSettings.h  recvData.cpp  recvData.h  uploadData.cpp  uploadData.h
